# gfxapi-challenge

./: .editorconfig  CMakeLists.txt  main.cpp  main.h  tri_d3d11.cpp  tri_d3d12.cpp
shaders/: CMakeLists.txt  shader_ps.hlsl  shader_vs.hlsl
